add Resend, better ids email subscribers, normalize email etc

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/vercel-mailer-mvp"
+
+# Resend
+RESEND_API_KEY="re_1234567890"
