--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^4.1.2",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
   },
